finished code along

--- a/index.ipynb
+++ b/index.ipynb
@@ -40,8 +40,8 @@
     "import numpy as np\n",
     "\n",
     "# Set up the variables\n",
-    "A = None\n",
-    "B = None"
+    "A = np.random.random(size=(200, 200))\n",
+    "B = np.random.random(size=(200, 200))"
    ]
   },
   {
@@ -61,14 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pure Python Time: None sec.\n"
+      "Pure Python Time: 0.21055843506474048 sec.\n"
      ]
     }
    ],
@@ -76,12 +76,15 @@
     "import timeit\n",
     "\n",
     "# Start the timer\n",
-    "start = None\n",
+    "start = timeit.default_timer()\n",
     "\n",
     "# Matrix multiplication in pure Python\n",
-    "\n",
-    "\n",
-    "time_spent = None\n",
+    "C = np.zeros((200, 200))\n",
+    "for i, row in enumerate(A):\n",
+    "    for j, column in enumerate(np.transpose(B)):\n",
+    "        C[i, j] = np.sum(row*column)\n",
+    "    \n",
+    "time_spent = timeit.default_timer() - start\n",
     "\n",
     "print('Pure Python Time:', time_spent, 'sec.')"
    ]
@@ -96,25 +99,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numpy Time: None sec.\n"
+      "Numpy Time: 0.0006038800347596407 sec.\n"
      ]
     }
    ],
    "source": [
     "# start the timer\n",
-    "start = None\n",
+    "start = timeit.default_timer()\n",
     "\n",
     "# Matrix multiplication in numpy\n",
+    "C = np.dot(A, B)\n",
     "\n",
-    "\n",
-    "time_spent = None\n",
+    "time_spent = timeit.default_timer() - start\n",
     "print('Numpy Time:', time_spent, 'sec.')"
    ]
   },
@@ -159,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
